<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:rowCount="4"
              android:columnCount="2"
              android:padding="10dp">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MAIN_TITLE"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center" android:id="@id/MAIN_TITLE"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ACTIVITY_TYPE_TEXT"
            android:layout_gravity="center_vertical|left" android:id="@id/MAIN_ACTIVITY_TYPE"
            android:layout_below="@id/MAIN_TITLE"/>

    <TextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/AUTO_START_TEXT"
            android:id="@id/MAIN_AUTO_START_TEXT" android:layout_below="@id/MAIN_ACTIVITY_TYPE"/>

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/MAIN_AUTO_START_BUTTON"
            android:singleLine="false" android:layout_below="@id/MAIN_AUTO_START_TEXT"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/START_BUTTON_START"
            android:id="@id/MAIN_START_BUTTON"
            android:layout_below="@id/MAIN_AUTO_START_BUTTON"/>

</RelativeLayout>

